[gd_scene load_steps=16 format=1]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/button_inventory.png" type="Texture" id=2]
[ext_resource path="res://assets/button_inventory_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/button_music1.png" type="Texture" id=4]
[ext_resource path="res://assets/button_music2.png" type="Texture" id=5]
[ext_resource path="res://assets/button_return1.png" type="Texture" id=6]
[ext_resource path="res://assets/button_return2.png" type="Texture" id=7]
[ext_resource path="res://assets/button_language1.png" type="Texture" id=8]
[ext_resource path="res://assets/button_language2.png" type="Texture" id=9]
[ext_resource path="res://assets/pause.png" type="Texture" id=10]
[ext_resource path="res://assets/menu_display.png" type="Texture" id=11]
[ext_resource path="res://assets/coin.png" type="Texture" id=12]
[ext_resource path="res://fonts/font16.fnt" type="BitmapFont" id=13]

[sub_resource type="Animation" id=1]

resource/name = "in"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/inventory:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1344, 72 ), Vector2( 960, 72 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/retomar:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1344, 360 ), Vector2( 960, 360 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/language:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -320, 360 ), Vector2( 64, 360 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/pause:transform/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, -108 ), Vector2( 640, 144 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/display:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 972 ), Vector2( 640, 432 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/musica:rect/pos")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -320, 72 ), Vector2( 64, 72 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "out"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/inventory:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 960, 72 ), Vector2( 1344, 72 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/musica:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 64, 72 ), Vector2( -320, 72 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/retomar:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 960, 360 ), Vector2( 1344, 360 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/language:rect/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 64, 360 ), Vector2( -320, 360 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/pause:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 144 ), Vector2( 640, -108 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/display:transform/pos")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 432 ), Vector2( 640, 972 ) ]
}

[node name="Menu" type="Node2D"]

process/pause_mode = 2
z/z = 10
script/script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 3
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="ColorFrame" type="ColorFrame" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0
color = Color( 0, 0.0859375, 1, 0.431686 )

[node name="inventory" type="TextureButton" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 960.0
margin/top = 72.0
margin/right = 1216.0
margin/bottom = 324.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="musica" type="TextureButton" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 72.0
margin/right = 320.0
margin/bottom = 324.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="retomar" type="TextureButton" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 960.0
margin/top = 360.0
margin/right = 1216.0
margin/bottom = 612.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="language" type="TextureButton" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 360.0
margin/right = 320.0
margin/bottom = 612.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/pressed = ExtResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="pause" type="Sprite" parent="CanvasLayer"]

transform/pos = Vector2( 640, 144 )
z/z = 10
z/relative = false
texture = ExtResource( 10 )

[node name="display" type="Sprite" parent="CanvasLayer"]

editor/display_folded = true
transform/pos = Vector2( 640, 432 )
texture = ExtResource( 11 )

[node name="coin" type="Sprite" parent="CanvasLayer/display"]

transform/pos = Vector2( -128, -72 )
transform/scale = Vector2( 2.5, 2.75 )
texture = ExtResource( 12 )

[node name="number" type="Label" parent="CanvasLayer/display"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -72.0
margin/right = 24.0
margin/bottom = -36.0
custom_fonts/font = ExtResource( 13 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="x" type="Label" parent="CanvasLayer/display"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -64.0
margin/top = -72.0
margin/right = -24.0
margin/bottom = -14.0
custom_fonts/font = ExtResource( 13 )
text = "x"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Anim" type="AnimationPlayer" parent="CanvasLayer"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/in = SubResource( 1 )
anims/out = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "in"

[connection signal="pressed" from="CanvasLayer/inventory" to="." method="_on_inventory_pressed"]

[connection signal="pressed" from="CanvasLayer/musica" to="." method="_on_musica_pressed"]

[connection signal="pressed" from="CanvasLayer/retomar" to="." method="_on_retomar_pressed"]


